nextcloud/overlays/jern.me/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
    - secretName: nextcloud-cert
      hosts:
        - nextcloud.jern.me
  rules:
    - host: nextcloud.jern.me
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  name: http
            path: /
            pathType: Prefix
---
# Nextcloud recommends rewriting /.wellknown/carddav and /.wellknown/caldav
# to /remote.php/dav since some clients have trouble with this.
# See https://docs.nextcloud.com/server/21/admin_manual/issues/general_troubleshooting.html#service-discovery
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-service-discovery-rewrite
spec:
  tls:
    - secretName: nextcloud-cert
      hosts:
        - nextcloud.jern.me
  rules:
    - host: nextcloud.jern.me
      http:
        paths:
          - backend:
              service:
                name: nextcloud
                port:
                  name: http
            path: /.wellknown/carddav
            pathType: Exact
          -
            path: /.wellknown/caldav
            pathType: Exact
